--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "mongoose-slug-updater": "^3.3.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "pug": "^3.0.3"
   }
